--- a/grunt-app/app/index.html
+++ b/grunt-app/app/index.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="styles/css/ionic-custom.min.css">
 
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="bower_components/ng-material-floating-button/mfb/dist/mfb.min.css">
   <!-- endbuild -->
 
   <!-- build:css styles/main.css -->
@@ -18,9 +17,15 @@
   <!-- endbuild -->
 </head>
 
-<body ng-app="app" class="container">
+<body ng-app="app" class="container" ng-cloak="">
 <div ui-view=""></div>
 </body>
+
+<script>
+  window.onerror = function(error, url, line) {
+    alert(line + ' : ' + error);
+  };
+</script>
 
 <!-- build:js scripts/ionic.js -->
 <script src="bower_components/ionic/release/js/ionic.bundle.min.js"></script>
@@ -30,27 +35,39 @@
 <script src="bower_components/ngCordova/dist/ng-cordova.min.js"></script>
 <!-- endbuild -->
 
-<!-- build:js scripts/swiper.js -->
-<script src="bower_components/Swiper/dist/js/swiper.jquery.min.js"></script>
-<script src="bower_components/Swiper/dist/js/swiper.min.js"></script>
-<!-- endbuild -->
-
 <script src="cordova.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
+<!-- AngularFire -->
+<script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
 
 <!-- build:js scripts/app.js -->
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+
 
 
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/lodash/dist/lodash.min.js"></script>
 <script src="bower_components/restangular/dist/restangular.js"></script>
-<script src="bower_components/ng-material-floating-button/src/mfb-directive.js"></script>
-
 
 <script src="src/main/main.module.js"></script>
 <script src="src/main/main.config.js"></script>
 
+
+<script src="src/homepage/homepage.module.js"></script>
+<script src="src/homepage/homepage.config.js"></script>
+<script src="src/homepage/homePageCtrl.controller.js"></script>
+
+
 <script src="src/app.module.js"></script>
+<script src="src/app.run.js"></script>
+<script src="src/app.config.js"></script>
+
+<script src="src/login/login.module.js"></script>
+<script src="src/login/login.config.js"></script>
+<script src="src/login/loginCtrl.controller.js"></script>
 
 <script src="src/core/core.module.js"></script>
 <script src="src/core/core.run.js"></script>
@@ -62,10 +79,10 @@
 <script src="src/common/common.module.js"></script>
 <script src="src/common/layout.factory.js"></script>
 <script src="src/common/rbpServer.factory.js"></script>
+<script src="src/common/common.const.js"></script>
+<script src="src/common/hootAPI.run.js"></script>
+<script src="src/common/hootAPI.factory.js"></script>
 
-<script src="src/homepage/homepage.module.js"></script>
-<script src="src/homepage/homepage.config.js"></script>
-<script src="src/homepage/homePageCtrl.controller.js"></script>
 <!-- endbuild -->
 
 </html>
