--- a/grunt-app/app/index.html
+++ b/grunt-app/app/index.html
@@ -33,6 +33,7 @@
 
 <!-- build:js scripts/ngCordova.js -->
 <script src="bower_components/ngCordova/dist/ng-cordova.min.js"></script>
+<script src="bower_components/ngCordova-IMEI/imei.js"></script>
 <!-- endbuild -->
 
 <script src="cordova.js"></script>
