--- a/grunt-app/app/src/homepage/homepageview.html
+++ b/grunt-app/app/src/homepage/homepageview.html
@@ -8,6 +8,11 @@
       <div style="position:relative; margin-top:-20px; "></b>Record Hoot</b><div>
     </button>
 
+      <button class="button button-block button-assertive" ng-click="vm.play()">
+      <br id="small-space"/>
+      <div style="position:relative; margin-top:-20px; "></b>Play Hoot</b><div>
+    </button>
+
     <button class="button button-block button-assertive"
             on-touch=vm.getLatLong()>
       <div style="position:relative; margin-top:-20px; "></b>getLat</b><div>
