--- a/grunt-app/app/index.html
+++ b/grunt-app/app/index.html
@@ -29,6 +29,8 @@
 
 <!-- build:js scripts/ionic.js -->
 <script src="bower_components/ionic/release/js/ionic.bundle.min.js"></script>
+<script src="bower_components/angularAudioRecorder/dist/angular-audio-recorder.min.js"></script>
+<script src="bower_components/wavesurfer.js"></script>
 <!-- endbuild -->
 
 <!-- build:js scripts/ngCordova.js -->
