--- a/grunt-app/app/src/homepage/homepageview.html
+++ b/grunt-app/app/src/homepage/homepageview.html
@@ -1,25 +1,75 @@
-<ion-pane style="background-color: #182330;" >
-  <ion-content class="padding" ng-cloak>
+<ion-pane style="background-color: #182330;" ng-cloak="">
+  <ion-content class="padding">
     <img ng-src={{vm.model.hootimage}} class="centered"/>
 
-    <button class="button button-block button-assertive" ng-click="vm.record()">
-      <i class="icon ion-mic-a"></i>
-      <br id="small-space"/>
-      <div style="position:relative; margin-top:-20px; "></b>Record Hoot</b><div>
-    </button>
+    <ng-audio-recorder id="mainAudio" audio-model="recorded" show-player="false" time-limit="timeLimit">
+      <div ng-if="recorder.isAvailable">
 
-      <button class="button button-block button-assertive" ng-click="vm.play()">
-      <br id="small-space"/>
-      <div style="position:relative; margin-top:-20px; "></b>Play Hoot</b><div>
-    </button>
+        <div ng-if="recorder.status.isDenied === true" style="color: red;">
+          You need to grant permission for this application to USE your microphone.
+        </div>
+        <button class="button button-block button-assertive" ng-click="recorder.startRecord()" type="button"
+                ng-disabled="recorder.status.isDenied === true || recorder.status.isRecording">
+          Start Record
+        </button>
+        <button  class="button button-block button-assertive" ng-click="recorder.stopRecord()" type="button" ng-disabled="recorder.status.isRecording === false">
+          Stop Record
+        </button>
 
+        <button  class="button button-block button-assertive" ng-click="recorder.status.isPlaying ? recorder.playbackPause() : recorder.playbackResume()"
+                 type="button" ng-disabled="recorder.status.isRecording || !recorder.audioModel">
+          {{recorder.status.isStopped || recorder.status.isPaused ? 'Play' : 'Pause'}}
+        </button>
+
+        <button  class="button button-block button-assertive" ng-click="recorder.save('test1')" ng-disabled="recorder.status.isRecording || !recorder.audioModel">
+          Download
+        </button>
+
+        <div style="max-width: 600px">
+          <div ng-show="recorder.status.isConverting">
+            Please wait while your recording is processed.
+          </div>
+
+          <div ng-show="recorder.isHtml5 && recorder.status.isRecording">
+            <ng-audio-recorder-analyzer></ng-audio-recorder-analyzer>
+          </div>
+          <br/>
+
+          <div ng-show="!recorder.status.isRecording && recorder.audioModel">
+            <ng-audio-recorder-wave-view wave-color="yellow" bar-color="red"></ng-audio-recorder-wave-view>
+          </div>
+        </div>
+
+        <ng-audio-recorder-wave-view ></ng-audio-recorder-wave-view>
+
+        <h2 style="font-family: sans-serif; text-align: center; width: 60px; border-radius: 20px;
+        border: solid 2px #333; padding: 20px 10px;" ng-if="recorder.status.isRecording">
+          {{recorder.elapsedTime > 9 ? recorder.elapsedTime : ('0'+recorder.elapsedTime)}}
+        </h2>
+
+
+        <h2 style="font-family: sans-serif; text-align: center; border: solid 2px #333; padding: 20px 10px;"
+            ng-if="recorder.status.isRecording">
+          Remaining Time: {{recorder.timeLimit - recorder.elapsedTime}}
+        </h2>
+      </div>
+
+
+      <div ng-if="!recorder.isAvailable">
+        Your browser does not support this feature natively, please use latest version of <a
+        href="https://www.google.com/chrome/browser" target="_blank">Google Chrome</a> or <a
+        href="https://www.mozilla.org/en-US/firefox/new/" target="_blank">Mozilla Firefox</a>. If you're on
+        Safari or Internet Explorer, you can install <a href="https://get.adobe.com/flashplayer/">Adobe Flash</a> to
+        use this feature.
+      </div>
+    </ng-audio-recorder>
     <button class="button button-block button-assertive"
             on-touch=vm.getLatLong()>
-      <div style="position:relative; margin-top:-20px; "></b>getLat</b><div>
+      <div style="position:relative; margin-top:-20px; "></b>getLat</b></div>
     </button>
     <button class="button button-block button-assertive"
             on-touch=vm.changeState('login');>
-      <div>Sign Out<div>
+      <div>Sign Out</div>
     </button>
 
     <div>
