--- a/grunt-app/app/index.html
+++ b/grunt-app/app/index.html
@@ -29,8 +29,14 @@
 
 <!-- build:js scripts/ionic.js -->
 <script src="bower_components/ionic/release/js/ionic.bundle.min.js"></script>
-<script src="bower_components/angularAudioRecorder/dist/angular-audio-recorder.min.js"></script>
+<!-- endbuild -->
+
+<!-- build:js scripts/vendor.js -->
+<script src="bower_components/angularAudioRecorder/dist/angular-audio-recorder.js"></script>
 <script src="bower_components/wavesurfer.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/lodash/dist/lodash.min.js"></script>
+<script src="bower_components/restangular/dist/restangular.js"></script>
 <!-- endbuild -->
 
 <!-- build:js scripts/ngCordova.js -->
@@ -39,6 +45,8 @@
 <!-- endbuild -->
 
 <script src="cordova.js"></script>
+
+
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
@@ -49,11 +57,6 @@
 
 <!-- build:js scripts/app.js -->
 
-
-
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
-<script src="bower_components/lodash/dist/lodash.min.js"></script>
-<script src="bower_components/restangular/dist/restangular.js"></script>
 
 <script src="src/main/main.module.js"></script>
 <script src="src/main/main.config.js"></script>
