--- a/grunt-app/app/src/homepage/homepageview.html
+++ b/grunt-app/app/src/homepage/homepageview.html
@@ -66,7 +66,7 @@
     </div>
 
     <button class="button button-block button-assertive"
-            on-touch=vm.changeState('login');>
+            on-touch="vm.signOut('login')">
       <div>Sign Out</div>
     </button>
 
