--- a/grunt-app/app/index.html
+++ b/grunt-app/app/index.html
@@ -7,13 +7,13 @@
 
   <title></title>
   <!-- build:css styles/ionic.css -->
-  <link rel="stylesheet" href="styles/css/ionic-custom.min.css?ionicCachebuster=48882">
+  <link rel="stylesheet" href="styles/css/ionic-custom.min.css">
 
-  <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css?ionicCachebuster=48882">
+  <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
   <!-- endbuild -->
 
   <!-- build:css styles/main.css -->
-  <link rel="stylesheet" href="styles/css/main.css?ionicCachebuster=48882">
+  <link rel="stylesheet" href="styles/css/main.css">
   <!-- endbuild -->
 </head>
 
@@ -21,60 +21,63 @@
 <div ui-view=""></div>
 </body>
 
+<script>
+  window.onerror = function(error, url, line) {
+     alert(line + ' : ' + error);;
+   };
+</script>
+
 <!-- build:js scripts/ionic.js -->
-<script src="bower_components/ionic/release/js/ionic.bundle.min.js?ionicCachebuster=48882"></script>
+<script src="bower_components/ionic/release/js/ionic.bundle.min.js"></script>
 <!-- endbuild -->
 
 <!-- build:js scripts/ngCordova.js -->
-<script src="bower_components/ngCordova/dist/ng-cordova.min.js?ionicCachebuster=48882"></script>
-<script src="bower_components/ngCordova-IMEI/imei.js?ionicCachebuster=48882"></script>
+<script src="bower_components/ngCordova/dist/ng-cordova.min.js"></script>
+<script src="bower_components/ngCordova-IMEI/imei.js"></script>
 <!-- endbuild -->
 
-<script src="cordova.js?ionicCachebuster=48882"></script>
+<script src="cordova.js"></script>
 
 
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 
 <!-- build:js scripts/app.js -->
+<script src="src/main/main.module.js"></script>
+<script src="src/main/main.config.js"></script>
 
 
-<script src="src/main/main.module.js?ionicCachebuster=48882"></script>
-<script src="src/main/main.config.js?ionicCachebuster=48882"></script>
+<script src="src/homepage/homepage.module.js"></script>
+<script src="src/homepage/homepage.config.js"></script>
+<script src="src/homepage/homePageCtrl.controller.js"></script>
 
 
-<script src="src/homepage/homepage.module.js?ionicCachebuster=48882"></script>
-<script src="src/homepage/homepage.config.js?ionicCachebuster=48882"></script>
-<script src="src/homepage/homePageCtrl.controller.js?ionicCachebuster=48882"></script>
+<script src="src/app.module.js"></script>
+<script src="src/app.run.js"></script>
+<script src="src/app.config.js"></script>
 
+<script src="src/login/login.module.js"></script>
+<script src="src/login/login.config.js"></script>
+<script src="src/login/loginCtrl.controller.js"></script>
 
-<script src="src/app.module.js?ionicCachebuster=48882"></script>
-<script src="src/app.run.js?ionicCachebuster=48882"></script>
-<script src="src/app.config.js?ionicCachebuster=48882"></script>
+<script src="src/core/core.module.js"></script>
+<script src="src/core/core.run.js"></script>
+<script src="src/core/httpStatus.constant.js"></script>
+<script src="src/core/map.directive.js"></script>
+<script src="src/core/restangular.config.js"></script>
+<script src="src/core/router.config.js"></script>
 
-<script src="src/login/login.module.js?ionicCachebuster=48882"></script>
-<script src="src/login/login.config.js?ionicCachebuster=48882"></script>
-<script src="src/login/loginCtrl.controller.js?ionicCachebuster=48882"></script>
-
-<script src="src/core/core.module.js?ionicCachebuster=48882"></script>
-<script src="src/core/core.run.js?ionicCachebuster=48882"></script>
-<script src="src/core/httpStatus.constant.js?ionicCachebuster=48882"></script>
-<script src="src/core/map.directive.js?ionicCachebuster=48882"></script>
-<script src="src/core/restangular.config.js?ionicCachebuster=48882"></script>
-<script src="src/core/router.config.js?ionicCachebuster=48882"></script>
-
-<script src="src/common/common.module.js?ionicCachebuster=48882"></script>
-<script src="src/common/layout.factory.js?ionicCachebuster=48882"></script>
-<script src="src/common/rbpServer.factory.js?ionicCachebuster=48882"></script>
-<script src="src/common/common.const.js?ionicCachebuster=48882"></script>
+<script src="src/common/common.module.js"></script>
+<script src="src/common/layout.factory.js"></script>
+<script src="src/common/rbpServer.factory.js"></script>
+<script src="src/common/common.const.js"></script>
 <script src="src/common/dataService.factory.js"></script>
-
 <!-- endbuild -->
 
 <!-- build:js scripts/vendor.js -->
-<script src="lib/angularAudioRecorder/dist/angular-audio-recorder.js?ionicCachebuster=48882"></script>
-<script src="bower_components/jquery/dist/jquery.min.js?ionicCachebuster=48882"></script>
-<script src="bower_components/lodash/dist/lodash.min.js?ionicCachebuster=48882"></script>
-<script src="bower_components/restangular/dist/restangular.js?ionicCachebuster=48882"></script>
+<script src="lib/angularAudioRecorder/dist/angular-audio-recorder.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/lodash/dist/lodash.min.js"></script>
+<script src="bower_components/restangular/dist/restangular.js"></script>
 <!-- endbuild -->
 
 </html>
