--- a/grunt-app/app/index.html
+++ b/grunt-app/app/index.html
@@ -28,7 +28,7 @@
 </script>
 
 <!-- build:js scripts/ionic.js -->
-<script src="bower_components/ionic/release/js/ionic.bundle.min.js"></script>
+<script src="bower_components/ionic/release/js/ionic.bundle.js"></script>
 <!-- endbuild -->
 
 <!-- build:js scripts/ngCordova.js -->
@@ -78,6 +78,7 @@
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/lodash/dist/lodash.min.js"></script>
 <script src="bower_components/restangular/dist/restangular.js"></script>
+<script src="bower_components/ngstorage/ngStorage.min.js"></script>
 <!-- endbuild -->
 
 </html>
