Added gestures on screen 2

--- a/grunt-app/app/index.html
+++ b/grunt-app/app/index.html
@@ -53,6 +53,11 @@
 <script src="src/homepage/homepage.config.js"></script>
 <script src="src/homepage/homePageCtrl.controller.js"></script>
 
+<script src="src/conversation/listenHoots.module.js"></script>
+<script src="src/conversation/listenHoots.config.js"></script>
+<script src="src/conversation/listenHoots.controller.js"></script>
+
+
 
 <script src="src/app.module.js"></script>
 <script src="src/app.run.js"></script>
