--- a/grunt-app/app/index.html
+++ b/grunt-app/app/index.html
@@ -50,6 +50,7 @@
 <script src="src/core/core.module.js"></script>
 <script src="src/common/common.module.js"></script>
 <script src="src/main/main.config.js"></script>
+<script src="src/conversation/conversation.module.js"></script>
 <script src="src/app.module.js"></script>
 <script src="src/conversation/listenHoots.module.js"></script>
 <script src="src/login/login.module.js"></script>
@@ -82,6 +83,7 @@
 <script src="bower_components/lodash/dist/lodash.min.js"></script>
 <script src="bower_components/restangular/dist/restangular.js"></script>
 <script src="bower_components/ngstorage/ngStorage.min.js"></script>
+<script src="src/conversation/trusted.filter.js"></script>
 <!-- endbuild -->
 
 </html>
