--- a/grunt-app/app/index.html
+++ b/grunt-app/app/index.html
@@ -55,10 +55,12 @@
 <script src="src/conversation/listenHoots.module.js"></script>
 <script src="src/login/login.module.js"></script>
 <script src="src/homepage/homepage.module.js"></script>
+<script src="src/chat/chat.module.js"></script>
 
 <script src="src/conversation/listenHoots.controller.js"></script>
 <script src="src/login/loginCtrl.controller.js"></script>
 <script src="src/homepage/homePageCtrl.controller.js"></script>
+<script src="src/chat/reply.controller.js"></script>
 
 <script src="src/conversation/listenHoots.config.js"></script>
 <script src="src/login/login.config.js"></script>
@@ -84,6 +86,7 @@
 <script src="bower_components/restangular/dist/restangular.js"></script>
 <script src="bower_components/ngstorage/ngStorage.min.js"></script>
 <script src="src/conversation/trusted.filter.js"></script>
+
 <!-- endbuild -->
 
 </html>
