called api's of the room and conversation

--- a/grunt-app/app/index.html
+++ b/grunt-app/app/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body ng-app="app" class="container" ng-cloak="">
-<ion-nav-view animation></ion-nav-view>
+<ion-nav-view> </ion-nav-view>
 </body>
 
 <script>
