--- a/grunt-app/app/src/chat/reply.html
+++ b/grunt-app/app/src/chat/reply.html
@@ -1,1 +1,78 @@
-<div> this a a sample view for chat.reply </div>
+<ion-pane id="reply" style="background-color:teal; ng-cloak="">
+
+    <ng-audio-recorder id="mainAudio" audio-model="recorded" vm="vm" show-player="false" time-limit="time-limit">
+
+        <ion-content class="padding" on-swipe-down="homepageview.html"  on-tap="recorder.stopRecord()" on-swipe-left="$root.goto('homepage')"
+                     on-swipe-right="vm.test2()">
+
+            <div class="container"   on-swipe-up="recorder.startRecord()">
+
+                <!--&lt;!&ndash;on-tap="recorder.save()"&ndash;&gt; /save function in the above div on tap-->
+
+
+                <div class="hoot" on-tap="">
+
+                    <div>
+                        <audio class="player" controls autoplay="true" ng-src="{{$root.hootURL(vm.selectedHoot._id) | trusted}}" type="audio/.wav" loop >
+
+                        </audio>
+                        <!--<audio id="audio"  src="https://s3.amazonaws.com/hoot-app-audio/585ce73651ede42484c6e9df.wav" loop></audio>-->
+                    </div>
+                    <ion-spinner
+
+                            ng-show="recorder.status.isRecording" icon="ripple" class="spinner-assertive">
+
+                    </ion-spinner>
+
+                    <div class="left" ng-click="vm.previousHoot()" ng-disabled="vm.isNotTapable">
+
+                        <h2>Left tap</h2>
+
+                    </div>
+
+                    <div class="right" ng-click="vm.nextHoot()" ng-disabled="vm.isNotTapable">
+
+                        <h2>right tap </h2>
+                        <h2>{{vm.isNotTapable}}</h2>
+
+                    </div>
+
+                    <!--<img ng-src={{vm.model.hootimage}} class="centered"/>-->
+
+                    <div ng-if="recorder.isAvailable">
+
+                        <div ng-if="recorder.status.isDenied === true" style="color: red;">
+                            You need to grant permission for this application to USE your microphone.
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="recorder">
+                <h4>
+                    Record a Hoot
+                </h4>
+    <span>
+      <i class="icon ion-chevron-up icon-accessory"></i>
+
+    </span>
+
+                <div>
+            <span>
+                  <img class="owl-open" src="images/postHoot.png" alt="">
+            </span>
+                </div>
+
+
+
+            </div>
+
+
+
+            <!--Insert Random Hoots by User-->
+
+        </ion-content>
+    </ng-audio-recorder>
+</ion-pane>
+
+
