--- a/grunt-app/app/src/homepage/homepageview.html
+++ b/grunt-app/app/src/homepage/homepageview.html
@@ -1,23 +1,22 @@
-<ion-pane style="background-color: floralwhite;" ng-cloak="">
+<ion-pane id="homepage" style="background-color: floralwhite;" ng-cloak="">
   <ng-audio-recorder id="mainAudio" audio-model="recorded" vm="vm" show-player="false" time-limit="time-limit">
+
   <ion-content class="padding" on-swipe-down="homepageview.html"  on-tap="recorder.stopRecord()" on-swipe-left="$root.goto('listenHoot')"
-  on-swipe-right="vm.test2(recorder)">
+               on-swipe-right="$root.goto('reply')">
 
     <!--<div on-tap="vm.test1(leftSwipe)">-->
-<div class="container"  on-tap="recorder.save()" on-swipe-up="recorder.startRecord() && vm.swipeUp()">
-  <p>
-
-
-
-  </p>
+<div class="container"  on-tap="recorder.save('upload')" on-swipe-up="recorder.startRecord() && vm.swipeUp()">
 
   <div class="home-content">
 
+
     <ion-spinner
-
             ng-show="recorder.status.isRecording" icon="ripple" class="spinner-assertive">
-
     </ion-spinner>
+
+    <div ng-show="recorder.save === true;" class="circle-loader">
+      <div ng-show="recorder.save === true;" class="checkmark draw"></div>
+    </div>
 
 
     <!--<img ng-src={{vm.model.hootimage}} class="centered"/>-->
@@ -79,11 +78,6 @@
 
     </span>
 
-  <div>
-            <span>
-                  <img class="owl-open" ng-src="{{vm.imageUrl}}" on-swipe-up="vm.onSwipe()"  alt="">
-            </span>
-    </div>
 
 
 
