api response fixes

--- a/grunt-app/app/src/homepage/homepageview.html
+++ b/grunt-app/app/src/homepage/homepageview.html
@@ -14,8 +14,8 @@
             ng-show="recorder.status.isRecording" icon="ripple" class="spinner-assertive">
     </ion-spinner>
 
-    <div ng-show="recorder.save === true;" class="circle-loader">
-      <div ng-show="recorder.save === true;" class="checkmark draw"></div>
+    <div ng-if="" class="circle-loader">
+      <div class="checkmark draw"></div>
     </div>
 
 
