initial commit for bitbucket

--- a/grunt-app/app/index.html
+++ b/grunt-app/app/index.html
@@ -8,11 +8,8 @@
   <title></title>
   <!-- build:css styles/ionic.css -->
   <link rel="stylesheet" href="styles/css/ionic-custom.min.css">
-
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
-
   <link href="//code.ionicframework.com/nightly/css/ionic.css" rel="stylesheet">
-
   <!-- endbuild -->
 
   <!-- build:css styles/main.css -->
@@ -24,11 +21,11 @@
 <ion-nav-view> </ion-nav-view>
 </body>
 
-<script>
-//  window.onerror = function(error, url, line) {
-//     alert(line + ' : ' + error);;
-//   };
-</script>
+<!--<script>-->
+<!--//  window.onerror = function(error, url, line) {-->
+<!--//     alert(line + ' : ' + error);;-->
+<!--//   };-->
+<!--</script>-->
 
 <!-- build:js scripts/ionic.js -->
 <script src="bower_components/ionic/release/js/ionic.bundle.js"></script>
@@ -56,16 +53,13 @@
 <script src="src/login/login.module.js"></script>
 <script src="src/homepage/homepage.module.js"></script>
 <script src="src/chat/chat.module.js"></script>
-
 <script src="src/conversation/listenHoots.controller.js"></script>
 <script src="src/login/loginCtrl.controller.js"></script>
 <script src="src/homepage/homePageCtrl.controller.js"></script>
 <script src="src/chat/reply.controller.js"></script>
-
 <script src="src/conversation/listenHoots.config.js"></script>
 <script src="src/login/login.config.js"></script>
 <script src="src/homepage/homepage.config.js"></script>
-
 <script src="src/app.run.js"></script>
 <script src="src/app.config.js"></script>
 <script src="src/core/core.run.js"></script>
@@ -86,7 +80,6 @@
 <script src="bower_components/restangular/dist/restangular.js"></script>
 <script src="bower_components/ngstorage/ngStorage.min.js"></script>
 <script src="src/conversation/trusted.filter.js"></script>
-
 <!-- endbuild -->
 
 </html>
