--- a/grunt-app/app/index.html
+++ b/grunt-app/app/index.html
@@ -29,7 +29,7 @@
 <!--</script>-->
 
 <!-- build:js scripts/ionic.js -->
-<script src="bower_components/ionic/release/js/ionic.bundle.js"></script>
+<script src="bower_components/ionic/js/ionic.bundle.min.js"></script>
 <!--<script src="//code.ionicframework.com/nightly/js/ionic.bundle.js"></script>-->
 <!-- endbuild -->
 
@@ -48,7 +48,6 @@
 <script src="src/core/core.module.js"></script>
 <script src="src/common/common.module.js"></script>
 <script src="src/main/main.config.js"></script>
-<script src="src/conversation/conversation.module.js"></script>
 <script src="src/app.module.js"></script>
 <script src="src/conversation/listenHoots.module.js"></script>
 <script src="src/login/login.module.js"></script>
