--- a/grunt-app/app/src/chat/reply.html
+++ b/grunt-app/app/src/chat/reply.html
@@ -1,4 +1,4 @@
-<ion-pane id="reply" style="background-color: #1f2f3f; ng-cloak="">
+<ion-pane id="reply" style="background-color: #1f2f3f;" ng-cloak="">
 <img class="img-center" style="
   width: 100%;
   height: 100%;" src="images/background.png" alt="">
