--- a/grunt-app/app/src/homepage/homepageview.html
+++ b/grunt-app/app/src/homepage/homepageview.html
@@ -1,45 +1,46 @@
-<ion-pane id="homepage" style="background-color: floralwhite;" ng-cloak="" >
-    <img class="homeBackground" src="images/background.png" alt="">
-    <ng-audio-recorder id="mainAudio" audio-model="recorded" vm="vm" show-player="false" time-limit="time-limit">
+<ion-pane id="homepage" style="background-color: floralwhite;" ng-cloak="">
+  <img class="homeBackground" src="images/background.png" alt="">
+  <ng-audio-recorder id="mainAudio" audio-model="recorded" vm="vm" show-player="false" time-limit="time-limit">
 
-        <ion-content class="padding" on-swipe-down="homepageview.html" on-tap="recorder.stopRecord()"
-                     on-swipe-left="$root.goto('listenHoot')"
-                     on-swipe-right="$root.goto('reply')">
+    <ion-content class="padding" on-swipe-down="homepageview.html" on-tap="recorder.stopRecord()"
+                 on-swipe-left="$root.goto('listenHoot',recorder)"
+                 on-swipe-right="$root.goto('reply', recorder)">
 
-            <!--<div on-tap="vm.test1(leftSwipe)">-->
-            <div class="container" on-tap="recorder.save('upload')"
-                 on-swipe-up="recorder.startRecord() && vm.swipeUp()">
+      <!--<div on-tap="vm.test1(leftSwipe)">-->
+      <div class="container" on-tap="recorder.save('upload')"
+           on-swipe-up="recorder.startRecord() && vm.swipeUp()">
 
-                <div class="home-content">
-                    <img class="homeOwl" ng-src={{vm.imageUrl}}>
+        <div class="home-content">
+          <img class="homeOwl" ng-src={{vm.imageUrl}}>
 
-                    <ion-spinner
-                            ng-show="recorder.status.isRecording" icon="ripple" class="spinner-assertive">
-                    </ion-spinner>
+          <ion-spinner
+            ng-show="recorder.status.isRecording" icon="ripple" class="spinner-assertive">
+          </ion-spinner>
 
-                    <div class="circle-loader animated infinite bounce">
-                        <div class="checkmark draw"></div>
-                    </div>
+          <div class="circle-loader animated infinite bounce">
+            <div class="checkmark draw"></div>
+          </div>
 
 
-                    <!--<img ng-src={{vm.model.hootimage}} class="centered"/>-->
+          <!--<img ng-src={{vm.model.hootimage}} class="centered"/>-->
 
-                    <div ng-if="recorder.isAvailable">
+          <div ng-if="recorder.isAvailable">
 
-                        <div ng-if="recorder.status.isDenied === true" style="color: red;">
-                            You need to grant permission for this application to USE your microphone.
-                        </div>
+            <div ng-if="recorder.status.isDenied === true" style="color: red;">
+              You need to grant permission for this application to USE your microphone.
+            </div>
 
-                    </div>
-                </div>
-                <div class="recorder" on-swipe-up="vm.onSwipe()">
-                    <h4>
-                        Record a Hoot
-                    </h4>
-    <span>
-      <i class="icon ion-chevron-up icon-accessory"></i>
-    </span>
-                </div>
-        </ion-content>
-    </ng-audio-recorder>
+          </div>
+        </div>
+        <div class="recorder" on-swipe-up="vm.onSwipe()">
+          <h4>
+            Record a Hoot
+          </h4>
+            <span>
+              <i class="icon ion-chevron-up icon-accessory"></i>
+            </span>
+        </div>
+      </div>
+    </ion-content>
+  </ng-audio-recorder>
 </ion-pane>
