--- a/grunt-app/app/index.html
+++ b/grunt-app/app/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
   <link href="//code.ionicframework.com/nightly/css/ionic.css" rel="stylesheet">
   <link rel="stylesheet" href="bower_components/animate.css/animate.min.css">
+  <link rel="stylesheet" href="bower_components/PACE/themes/orange/pace-theme-flash.css">
   <!-- endbuild -->
 
   <!-- build:css styles/main.css -->
@@ -80,6 +81,7 @@
 <script src="bower_components/restangular/dist/restangular.js"></script>
 <script src="bower_components/ngstorage/ngStorage.min.js"></script>
 <script src="src/conversation/trusted.filter.js"></script>
+<script src="bower_components/PACE/pace.min.js"></script>
 <!-- endbuild -->
 
 </html>
