ListenHoot page inProgress

--- a/grunt-app/app/src/login/loginview.html
+++ b/grunt-app/app/src/login/loginview.html
@@ -12,4 +12,7 @@
   <div ng-hide="vm.activateNight">
     <p class="tap-text animated pulse infinite">Tap Screen to Login</p>
   </div>
+  <div ng-show="$root.isLoggedIn">
+    <p class="tap-text animated pulse infinite">Tap To Continue</p>
+  </div>
 </ion-pane>
