--- a/grunt-app/app/src/homepage/homepageview.html
+++ b/grunt-app/app/src/homepage/homepageview.html
@@ -1,7 +1,7 @@
 <ion-pane id="homepage" style="background-color: floralwhite;" ng-cloak="">
   <ng-audio-recorder id="mainAudio" audio-model="recorded" vm="vm" show-player="false" time-limit="time-limit">
 
-    <div class="main-text animated" ng-hide="$root.isRecording" ng-class="{'fadeOutDown': $root.isRecording, 'fadeInUp': !$root.isRecording}">
+    <div class="main-text animated" ng-hide="$root.isRecording || !$root.isRecording" ng-class="{'fadeOutDown': $root.isRecording, 'fadeInUp': !$root.isRecording}">
       <p class="text-hoot">Give a Hoot </p>
       <p class="text-hoot">Take a Hoot</p>
     </div>
@@ -9,24 +9,21 @@
     <ion-content overflow-scroll="false" has-bouncing="true" class="padding" on-swipe-down="homepageview.html" on-tap="recorder.stopRecord()"
                  on-swipe-left="$root.goto('listenHoot',recorder)" style="z-index: 99999; padding: 0;">
 
+      <audio id="audio-tag" class="player" controls autoplay="true"
+             ng-src="{{'../../sounds/loggedIn.mp3' | trusted}}" type="audio/.wav">
+      </audio>
       <!--<div on-tap="vm.test1(leftSwipe)">-->
       <div class="container" on-tap="recorder.save('upload')"
            on-swipe-up="vm.startRecord(recorder);">
+
 
         <div ng-show="$root.isRecording">
           <img class="img-owl animated" ng-class="{'fadeIn': !$root.isRecording}" ng-src="images/postHootfly.png" />
         </div>
         <div ng-show="!$root.isRecording">
-        <img class="img-owl animated" ng-class="{'fadeOut': $root.isRecording}"  ng-src="images/postHoot.png" />
+        <img class="img-owl animated" ng-class="{'fadeOut': $root.isRecording, 'zoomOutAnimate': $root.PageChange}"  ng-src="images/postHoot.png" />
         </div>
         <div class="home-content">
-
-
-          <!--<div class="circle-loader slideOutDown infinite">-->
-            <!--<div class="checkmark animated draw infinite"></div>-->
-          <!--</div>-->
-
-
           <!--<img ng-src={{vm.model.hootimage}} class="centered"/>-->
 
           <div ng-if="recorder.isAvailable">
@@ -40,12 +37,12 @@
 
       </div>
     </ion-content>
-
+    <img ng-show="$root.showSuccess"  ng-class="{'fadeIn': $root.showSuccess, 'fadeOut': !$root.showSuccess}" class="img-success animated" ng-src="images/success.png" alt="">
+    <img class="img-center animated" ng-class="{'fadeOutUp': $root.isRecording, 'fadeInDown': !$root.isRecording, 'zoomInSkyAnimate': $root.PageChange}" ng-src="images/nightsky.jpg"/>
     <img class="img-recorded" ng-if="recorder.status.isPlaying" ng-src="images/listen.gif" alt="">
-    <img class="img-sun animated" ng-class="{'fadeOutDown': $root.isRecording, 'fadeInUp': !$root.isRecording}" ng-src="images/moon.png"/>
-    <img class="img-tree parallax-animated" ng-class="{'fadeOutDown': $root.isRecording, 'fadeInUp': !$root.isRecording}" ng-src="images/tree.png"/>
-    <img class="img-center" ng-src="images/nightmotion.gif"/>
-    <img class="img-center animated" ng-class="{'fadeOut': $root.isRecording, 'fadeInDown': !$root.isRecording}" ng-src="images/nightsky.jpg"/>
+    <img class="img-sun animated" ng-class="{'fadeOutDown': $root.isRecording, 'fadeInUp': !$root.isRecording, 'zoomOutMoodAnimate': $root.PageChange}" ng-src="images/moon.png"/>
+    <img class="img-tree parallax-animated" ng-class="{'fadeOutDown': $root.isRecording  || $root.PageChange, 'fadeInUp': !$root.isRecording}" ng-src="images/tree.png"/>
+    <img class="img-center-motion" ng-src="images/nightmotion.gif"/>
 
   </ng-audio-recorder>
 </ion-pane>
