Listen Hoot Page inProgress

--- a/grunt-app/app/src/homepage/homepageview.html
+++ b/grunt-app/app/src/homepage/homepageview.html
@@ -1,8 +1,8 @@
 <ion-pane id="homepage" style="background-color: floralwhite;" ng-cloak="">
   <ng-audio-recorder id="mainAudio" audio-model="recorded" vm="vm" show-player="false" time-limit="time-limit">
 
-    <div class="main-text animated" ng-hide="$root.isRecording || !$root.isRecording" ng-class="{'fadeOutDown': $root.isRecording, 'fadeInUp': !$root.isRecording}">
-      <p class="text-hoot">Give a Hoot </p>
+    <div class="main-text animated" ng-hide="$root.isRecording" ng-class="{'fadeOutDown': $root.isRecording, 'fadeInUp': !$root.isRecording}">
+      <p class="text-hoot">Give a Hoot</p>
       <p class="text-hoot">Take a Hoot</p>
     </div>
 
@@ -21,7 +21,7 @@
           <img class="img-owl animated" ng-class="{'fadeIn': !$root.isRecording}" ng-src="images/postHootfly.png" />
         </div>
         <div ng-show="!$root.isRecording">
-        <img class="img-owl animated" ng-class="{'fadeOut': $root.isRecording, 'zoomOutAnimate': $root.PageChange}"  ng-src="images/postHoot.png" />
+        <img class="img-owl animated" ng-class="{'fadeOut': $root.isRecording, 'zoomOutAnimate': $root.PageChange, 'zoomInAnimate': !$root.PageChange}"  ng-src="images/postHoot.png" />
         </div>
         <div class="home-content">
           <!--<img ng-src={{vm.model.hootimage}} class="centered"/>-->
@@ -40,8 +40,8 @@
     <img ng-show="$root.showSuccess"  ng-class="{'fadeIn': $root.showSuccess, 'fadeOut': !$root.showSuccess}" class="img-success animated" ng-src="images/success.png" alt="">
     <img class="img-center animated" ng-class="{'fadeOutUp': $root.isRecording, 'fadeInDown': !$root.isRecording, 'zoomInSkyAnimate': $root.PageChange}" ng-src="images/nightsky.jpg"/>
     <img class="img-recorded" ng-if="recorder.status.isPlaying" ng-src="images/listen.gif" alt="">
-    <img class="img-sun animated" ng-class="{'fadeOutDown': $root.isRecording, 'fadeInUp': !$root.isRecording, 'zoomOutMoodAnimate': $root.PageChange}" ng-src="images/moon.png"/>
-    <img class="img-tree parallax-animated" ng-class="{'fadeOutDown': $root.isRecording  || $root.PageChange, 'fadeInUp': !$root.isRecording}" ng-src="images/tree.png"/>
+    <img class="img-sun animated" ng-class="{'fadeOutDown': $root.isRecording, 'fadeInUp': !$root.isRecording, 'zoomOutMoonAnimate': $root.PageChange}" ng-src="images/moon.png"/>
+    <img class="img-tree parallax-animated" ng-class="{'fadeOutDown': $root.isRecording  || $root.PageChange, 'fadeInUp': !$root.isRecording }" ng-src="images/tree.png"/>
     <img class="img-center-motion" ng-src="images/nightmotion.gif"/>
 
   </ng-audio-recorder>
