--- a/grunt-app/app/src/login/loginview.html
+++ b/grunt-app/app/src/login/loginview.html
@@ -1,4 +1,4 @@
-<ion-pane style="background-color: whitesmoke;"  on-tap="vm.createUser()">
+<ion-pane id="login" style="background-color: whitesmoke;"  on-tap="vm.createUser()">
   <div class="main-text">
     <p class="text-hoot">Give a Hoot</p>
     <p class="text-hoot">Take a Hoot</p>
